# screen-classifier

./: .gitignore  README.md  pyproject.toml
data/: raw.dvc
src/scene_classifier/: __init__.py
src/scene_classifier/data/: dataset.py  split.py
